configure .env file to use api/v1

--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-VITE_BASE_URL=https://lmsbackend-production-88eb.up.railway.app
+VITE_BASE_URL=https://lmsbackend-production-88eb.up.railway.app/api/v1
